--- a/style/style.css
+++ b/style/style.css
@@ -353,12 +353,9 @@ table{
     color: white;
 }
 
-.footer-sec{
-    display: flex;
-    max-width: 1060px;
-    gap: 102px;
+.footer-contener{
     margin: 0 auto;
-    margin-left:
+    margin-left: 150px;
 }
 
 .footer-ff{
@@ -368,16 +365,16 @@ table{
 .brand-name{
     color: #E6533C;
     font-weight: 900;
-    font-size: 4.356rem;
+    font-size: 4.2rem;
 }
 
 .footer-brand-discription{
     color: rgba(255, 255, 255, 0.5);;
 }
 .footer-sec{
-align-items: center;
-justify-content: space-between;
-margin-left: 102px;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 102px;
 }
 .footer-contener{
     align-items: center;
@@ -404,4 +401,50 @@ margin-left: 102px;
 .copyright{
     font-size: 1.4rem;
     text-align: center;
+}
+
+
+@media screen and (max-width: 576px) {
+    .header-containt,
+    .habits-contine-item,
+    .run-extra-content,
+    .bmi-calculatorr-container,
+    .footer-sec,
+    .footer-contener{
+        flex-direction: column;
+    }
+    .header-img{
+        margin-left: -50px;
+    }
+    .habits-contine1,
+    .habits-contine2,
+    .habits-contine3,
+    .habits-contine4,
+    .run-extra-iamge,
+    .team-contant-image{
+        margin: 0 auto;
+    }
+    .team-image{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .team-images{
+        width: 100%;
+        height: 100%;
+    }
+    .team-contant-image{
+            margin-top: 20px;
+    }
+    .footer-content-1{
+        padding: 0px;
+    }
+    .footer-sec{
+        margin-left: 0px;
+    }
+    .footer-content-1{
+        margin-left: 0px;
+        padding: 0px;
+    }
+    .brand-name{
+        margin-bottom: 10px;
+    }
 }
